Firxt version for mUltilanguage v1.3. tooltips

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -44,7 +44,8 @@
     "disabled": "Disabled",
     "loading": "Loading...",
     "required": "Required",
-    "optional": "Optional"
+    "optional": "Optional",
+    "select": "Select"
   },
   "messages": {
     "success": "Operation successful",
@@ -65,5 +66,71 @@
     "minLength": "Minimum {min} characters",
     "maxLength": "Maximum {max} characters",
     "invalidPort": "Port must be between 1 and 65535"
+  },
+  "tooltips": {
+    "expandSidebar": "Expand sidebar panel",
+    "collapseSidebar": "Collapse sidebar panel",
+    "connections": "Connections",
+    "passwords": "Passwords",
+    "createGroup": "Create tab group",
+    "aiChat": "AI Chat",
+    "anythingLLM": "AnythingLLM",
+    "openWebUI": "Open WebUI",
+    "filesystemMCP": "Filesystem MCP",
+    "localTerminal": "Local terminal",
+    "settings": "Settings",
+    "appMenu": "Application menu",
+    "newConnection": "New connection",
+    "createFolder": "Create folder",
+    "passwordManager": "Password manager",
+    "mcpExplorer": "MCP Explorer",
+    "newPassword": "New password",
+    "newFolder": "New folder",
+    "reloadFolder": "Reload folder",
+    "goToConnections": "Go to connections",
+    "goToPath": "Go to path",
+    "goToParent": "Go to parent directory",
+    "refresh": "Refresh",
+    "goToHome": "Go to home",
+    "showHiddenFiles": "Show hidden files",
+    "hideHiddenFiles": "Hide hidden files",
+    "download": "Download",
+    "rename": "Rename",
+    "delete": "Delete",
+    "retry": "Retry",
+    "reloadUI": "Reload UI",
+    "configurePerformance": "Configure performance",
+    "configureFont": "Configure font and size",
+    "clearUpdateCache": "Clear update cache to resolve checksum issues",
+    "uninstall": "Uninstall",
+    "collapseAll": "Collapse all",
+    "expandAll": "Expand all",
+    "browse": "Browse...",
+    "testConnection": "Test connection",
+    "editMCPConfig": "Edit MCP configuration",
+    "uploadToNextcloud": "Upload local configuration to Nextcloud",
+    "downloadFromNextcloud": "Download configuration from Nextcloud",
+    "autoSyncLatest": "Automatically sync the latest version",
+    "changeFile": "Change file",
+    "removeFile": "Remove file"
+  },
+  "appMenu": {
+    "file": "File",
+    "import": "Import",
+    "view": "View",
+    "reload": "Reload",
+    "forceReload": "Force reload",
+    "devTools": "Developer tools",
+    "zoomIn": "Zoom in",
+    "zoomOut": "Zoom out",
+    "actualSize": "Actual size",
+    "fullscreen": "Fullscreen",
+    "unblockForms": "🔧 Unblock Forms",
+    "about": "About NodeTerm",
+    "version": "Version",
+    "close": "Close",
+    "exit": "Exit",
+    "exitConfirm": "Are you sure you want to exit NodeTerm?",
+    "updateNow": "Update now"
   }
 }
