--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -44,7 +44,8 @@
     "disabled": "Deshabilitado",
     "loading": "Cargando...",
     "required": "Obligatorio",
-    "optional": "Opcional"
+    "optional": "Opcional",
+    "select": "Seleccionar"
   },
   "messages": {
     "success": "Operación exitosa",
@@ -65,5 +66,71 @@
     "minLength": "Mínimo {min} caracteres",
     "maxLength": "Máximo {max} caracteres",
     "invalidPort": "Puerto debe ser entre 1 y 65535"
+  },
+  "tooltips": {
+    "expandSidebar": "Expandir panel lateral",
+    "collapseSidebar": "Colapsar panel lateral",
+    "connections": "Conexiones",
+    "passwords": "Passwords",
+    "createGroup": "Crear grupo de pestañas",
+    "aiChat": "Chat de IA",
+    "anythingLLM": "AnythingLLM",
+    "openWebUI": "Open WebUI",
+    "filesystemMCP": "Filesystem MCP",
+    "localTerminal": "Terminal local",
+    "settings": "Configuración",
+    "appMenu": "Menú de la aplicación",
+    "newConnection": "Nueva conexión",
+    "createFolder": "Crear carpeta",
+    "passwordManager": "Gestor de passwords",
+    "mcpExplorer": "Explorador MCP",
+    "newPassword": "Nuevo password",
+    "newFolder": "Nueva carpeta",
+    "reloadFolder": "Recargar carpeta",
+    "goToConnections": "Ir a conexiones",
+    "goToPath": "Ir a ruta",
+    "goToParent": "Ir al directorio padre",
+    "refresh": "Actualizar",
+    "goToHome": "Ir al home",
+    "showHiddenFiles": "Mostrar archivos ocultos",
+    "hideHiddenFiles": "Ocultar archivos ocultos",
+    "download": "Descargar",
+    "rename": "Renombrar",
+    "delete": "Eliminar",
+    "retry": "Reintentar",
+    "reloadUI": "Recargar UI",
+    "configurePerformance": "Configurar rendimiento",
+    "configureFont": "Configurar fuente y tamaño",
+    "clearUpdateCache": "Limpia el caché de actualizaciones para resolver problemas de checksum",
+    "uninstall": "Desinstalar",
+    "collapseAll": "Plegar todo",
+    "expandAll": "Desplegar todo",
+    "browse": "Explorar...",
+    "testConnection": "Probar conexión",
+    "editMCPConfig": "Editar configuración MCP",
+    "uploadToNextcloud": "Sube la configuración local a Nextcloud",
+    "downloadFromNextcloud": "Descarga la configuración desde Nextcloud",
+    "autoSyncLatest": "Sincroniza automáticamente la versión más reciente",
+    "changeFile": "Cambiar archivo",
+    "removeFile": "Remover archivo"
+  },
+  "appMenu": {
+    "file": "Archivo",
+    "import": "Importar",
+    "view": "Ver",
+    "reload": "Recargar",
+    "forceReload": "Forzar recarga",
+    "devTools": "Herramientas de desarrollo",
+    "zoomIn": "Acercar",
+    "zoomOut": "Alejar",
+    "actualSize": "Tamaño real",
+    "fullscreen": "Pantalla completa",
+    "unblockForms": "🔧 Desbloquear Formularios",
+    "about": "Acerca de NodeTerm",
+    "version": "Versión",
+    "close": "Cerrar",
+    "exit": "Salir",
+    "exitConfirm": "¿Estás seguro de que quieres salir de NodeTerm?",
+    "updateNow": "Actualizar ahora"
   }
 }
