--- a/src/i18n/locales/es/settings.json
+++ b/src/i18n/locales/es/settings.json
@@ -108,7 +108,8 @@
     "resizeAckTimeoutHint": "Tiempo máximo esperando respuesta del display antes de permitir otro resize",
     "guacdInactivity": "Watchdog de inactividad de Guacd (min)",
     "guacdInactivityHint": "0 para desactivar. Cierre por inactividad entre guacamole-lite y guacd",
-    "backendTitle": "Backend Guacamole"
+    "backendTitle": "Backend Guacamole",
+    "restartGuacd": "Reiniciar Guacd"
   },
   "sync": {
     "title": "Sincronización",
