--- a/src/i18n/locales/en/settings.json
+++ b/src/i18n/locales/en/settings.json
@@ -251,6 +251,7 @@
     "resizeAckTimeoutHint": "Maximum time waiting for display response before allowing another resize",
     "guacdInactivity": "Guacd inactivity watchdog (min)",
     "guacdInactivityHint": "0 to disable. Inactivity shutdown between guacamole-lite and guacd",
+    "guacdInactivitySynced": "Automatically synced with session activity threshold",
     "backendTitle": "Guacamole Backend",
     "restartGuacd": "Restart Guacd"
   },
